# aos

./: .gitignore  ARCHITECTURE.md  BOOTSTRAP.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  prior-art.md
.github/workflows/: ci.yml
capabilities/: agent-comms.md  gtd-capture.md  importer.md  interviewing.md  kb.md  news-tracker.md  onboarding.md  permission-gate.md  ptt-mode.md  router.md  time-blocking.md
capabilities/capability-builder/: CAPABILITY.md  README.md
capabilities/gtd-capture/: CAPABILITY.md  MOD.example.md  ONBOARDING.md  README.md
capabilities/importer/: CAPABILITY.md  README.md
capabilities/kb/: .CAPABILITY.md.swp  CAPABILITY.md  MOD.example.md  ONBOARDING.md  README.md
capabilities/kb/tool/: README.md  pyproject.toml
capabilities/kb/tool/src/aos_base/: __init__.py  cli.py
capabilities/onboarding/: CAPABILITY.md  MOD.example.md  ONBOARDING.md  README.md
design/: agent-comms.md  capability-anatomy.md  install-flow.md  kb-authorization.md  kb-methodology.md
docs/: BOOTSTRAP.md  BUILD-GAPS.md  CONCEPTS.md  DOGFOOD.md  INSTALL.md  TESTING.md  USAGE.md
harnesses/hermes/: CHEATSHEET.md
rfcs/: RFC-001-naming.md  RFC-002-testing-quality.md  RFC-003-governance.md  RFC-004-installer.md  RFC-005-overlay-persistence.md  RFC-006-multi-kb-routing.md  RFC-007-permission-gate-vocabulary.md  RFC-008-agent-comms-opinionation.md
tests/fixtures/: PERSONA.md
tests/golden/: BEHAVIOR.md  PROTOCOL.md  RUBRIC.md  check.mjs  normalize.mjs  prestate.sh
tests/tool/: test_base.py
tools/: check.sh  package-lock.json  package.json
(+200 files in other folders)
